--- a/.env.example
+++ b/.env.example
@@ -30,12 +30,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=host
 MAIL_PORT=587
-MAIL_USERNAME=immofindmaroc@gmail.com
-MAIL_PASSWORD=ucvaphywafmiusgy  # Use your App Password (if 2FA enabled) or your Gmail password
+MAIL_USERNAME=username
+MAIL_PASSWORD=password  # Use your App Password (if 2FA enabled) or your Gmail password
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=immofindmaroc@gmail.com
+MAIL_FROM_ADDRESS=yourmail@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
     # The sender name, typically your app name
 
